<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="105dp"
        android:layout_height="30dp"
        android:text="@string/tv_number1"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/edtNumber1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtNumber1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edittext1"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_number2"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/edtNumber2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNumber1" />

    <EditText
        android:id="@+id/edtNumber2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/EditText2"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/btnPlus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btnPlus"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="98dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="19dp"
        android:backgroundTint="#009688"
        android:text="@string/add"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/btnMultiply"
        app:layout_constraintEnd_toStartOf="@+id/btnMinus"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnMinus"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="92dp"
        android:backgroundTint="#009688"
        android:text="@string/decriment"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnPlus"
        app:layout_constraintTop_toBottomOf="@+id/edtNumber2" />

    <Button
        android:id="@+id/btnDivide"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="78dp"
        android:backgroundTint="#009688"
        android:text="@string/division"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnMultiply"
        app:layout_constraintTop_toBottomOf="@+id/btnMinus"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnMultiply"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="98dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="78dp"
        android:backgroundTint="#009688"
        android:text="@string/multiple"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnDivide"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>